@@ -14,7 +14,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>1.5.14.RELEASE</version>
+    <version>2.0.4.RELEASE</version>
     <relativePath /> <!-- lookup parent from repository -->
   </parent>
 
@@ -55,17 +55,13 @@
         <version>0.9.6</version>
         <configuration>
           <from>
-            <image>openjdk:8u171-jre-alpine</image>
+            <image>openjdk:10-jre-slim</image>
           </from>
           <to>
             <image>gcr.io/${gcp.project.name}/${project.name}:${project.version}</image>
           </to>
           <container>
             <jvmFlags>
-              <jvmFlag>-XX:+UnlockExperimentalVMOpti-XX:+UseCGroupMemoryLimitForHeapons</jvmFlag>
-              <jvmFlag>-XX:ParallelGCThreads=1</jvmFlag>
-              <jvmFlag>-XX:CICompilerCount=2</jvmFlag>
-              <jvmFlag>-Djava.util.concurrent.ForkJoinPool.common.parallelism=1</jvmFlag>
               <jvmFlag>-Dcom.sun.management.jmxremote.port=7199</jvmFlag>
               <jvmFlag>-Dcom.sun.management.jmxremote.rmi.port=7199</jvmFlag>
               <jvmFlag>-Dcom.sun.management.jmxremote.authenticate=false</jvmFlag>
